k8s/database-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
        labels:
          app: database
    spec:       
      volumes:  
      - name : init-script
        configMap: 
          name: postgres-init
      
      - name : postgres-data
        persistentVolumeClaim:
          claimName: postgres-pvc

      containers:
        - name: database
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
          - name: init-script
            mountPath: /docker-entrypoint-initdb.d

          - name: postgres-data
            mountPath: /var/lib/postgresql
          
---

apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  type: ClusterIP
  selector:
    app: database
  ports:
  - port: 5432
    targetPort: 5432
