k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
      metadata:
        labels:
          app: frontend
      spec: 
        containers:
          - name: frontend
            image: jaydeepimages.azurecr.io/task-4-frontend:latest
            livenessProbe:
              httpGet:
                path: /
                port: 80
              initialDelaySeconds: 10
              periodSeconds: 10
              successThreshold: 1
              failureThreshold: 2
            ports:
              - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - port: 3000
    targetPort: 80
